# whisper_podcast

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app/: app.py
modules/: article_generator.py  audio_downloader.py  audio_metadata_retriever.py  audio_retriever.py  transcriber.py  translator.py
pipeline/: pipeline.py
scripts/: main.py
